
<resources>
<string name="app_name">Calcon</string>

<!--    Main cards in CALCON-->
<string name="bmi">BMI</string>
<string name="age">AGE</string>
<string name="Arthm">Arithematic</string>
<string name="Temp">Temperature</string>
<string name="Curr">Currency</string>
<string name="stopWatch">Stop Watch</string>

<!--Arthematic Calculator-->
<string name="display">Enter a value</string>
<string name="fakeHint"> </string>

<string name="backspace"> </string>

<string name="one">1</string>
<string name="two">2</string>
<string name="three">3</string>
<string name="four">4</string>
<string name="five">5</string>
<string name="six">6</string>
<string name="seven">7</string>
<string name="eight">8</string>
<string name="nine">9</string>
<string name="zero">0</string>

<string name="clear">C</string>
<string name="percent">^</string>
<string name="parentheses">( )</string>
<string name="divide">÷</string>
<string name="multiply">×</string>
<string name="add">+</string>
<string name="subtract">-</string>
<string name="plusMinus">+/-</string>
<string name="point">.</string>
<string name="equals">=</string>

</resources>
